added new rows with new items

--- a/index.html
+++ b/index.html
@@ -65,7 +65,94 @@
         <div class = "row">
            <h1 id = "charSelect">Select Your Character</h1> 
         </div>
-   
+        <div id = "enemyChoice" class = "row">
+                <div id = "luke2" class = "charBox">
+                        <p class = "charName">
+                            Luke Skywalker
+                        </p>
+                        <img class = "image" src = assets/images/luke.jpg></img>
+                        <p class = "charValue">
+                            150
+                        </p>
+                </div>
+                <div id = "obi2" class = "charBox">
+                            <p class = "charName">
+                                Obi-Wan Kenobi
+                            </p>
+                            <img class = "image" src = assets/images/obi.jpg></img>
+                            <p class = "charValue">
+                                170
+                            </p>
+                </div>
+                <div id = "yoda2" class = "charBox">
+                            <p class = "charName">
+                                Yoda
+                            </p>
+                            <img class = "image" src = assets/images/yoda.png></img>
+                            <p class = "charValue">
+                                230
+                            </p>
+                </div>
+                <div id = "qui2" class = "charBox">
+                            <p class = "charName">
+                                Qui-Gon Jinn
+                            </p>
+                            <img class = "image" src = assets/images/qui.png></img>
+                            <p class = "charValue">
+                                190
+                            </p>
+                </div>
+        </div>
+        <div class = "row">
+           <h1 id = "enemies"> </h1>
+        </div>
+        <div id = "enemyChoice" class = "row">
+                <div id = "luke3" class = "charBox2">
+                        <p class = "charName">
+                            Luke Skywalker
+                        </p>
+                        <img class = "image" src = assets/images/luke.jpg></img>
+                        <p class = "charValue">
+                            150
+                        </p>
+                </div>
+                <div id = "obi3" class = "charBox2">
+                            <p class = "charName">
+                                Obi-Wan Kenobi
+                            </p>
+                            <img class = "image" src = assets/images/obi.jpg></img>
+                            <p class = "charValue">
+                                170
+                            </p>
+                </div>
+                <div id = "yoda3" class = "charBox2">
+                            <p class = "charName">
+                                Yoda
+                            </p>
+                            <img class = "image" src = assets/images/yoda.png></img>
+                            <p class = "charValue">
+                                230
+                            </p>
+                </div>
+                <div id = "qui3" class = "charBox2">
+                            <p class = "charName">
+                                Qui-Gon Jinn
+                            </p>
+                            <img class = "image" src = assets/images/qui.png></img>
+                            <p class = "charValue">
+                                190
+                            </p>
+                </div>
+        </div>
+        <div class = "row">
+           <h1 id = "fightSection"> </h1> 
+        </div>
+        <div class = "row">
+            <button id = "attack">ATTACK</button>
+        </div>   
+        <div class = "row">
+            <h1 id = "defender"> </h1>
+        </div>
   
 
     </div>
