added game mechanics

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         Luke Skywalker
                     </p>
                     <img class = "image" src = assets/images/luke.jpg></img>
-                    <p id = "lukehealth" class = "charValue">
+                    <p class = "charValue">
                         150
                     </p>
             </div>
@@ -36,7 +36,7 @@
                         Obi-Wan Kenobi
                     </p>
                     <img class = "image" src = assets/images/obi.jpg></img>
-                    <p id = "obihealth" class = "charValue">
+                    <p class = "charValue">
                        170
                     </p>
             </div>
@@ -45,7 +45,7 @@
                         Yoda
                     </p>
                     <img class = "image" src = assets/images/yoda.png></img>
-                    <p id = "yodahealth" class = "charValue">
+                    <p  class = "charValue">
                         230
                     </p>
             </div>
@@ -54,7 +54,7 @@
                         Qui-Gon Jinn
                     </p>
                     <img class = "image" src = assets/images/qui.png></img>
-                    <p id = "quihealth" class = "charValue">
+                    <p  class = "charValue">
                         190
                     </p>
             </div>
@@ -71,7 +71,7 @@
                             Luke Skywalker
                         </p>
                         <img class = "image" src = assets/images/luke.jpg></img>
-                        <p class = "charValue">
+                        <p id = "lukehealth" class = "charValue">
                             150
                         </p>
                 </div>
@@ -80,7 +80,7 @@
                                 Obi-Wan Kenobi
                             </p>
                             <img class = "image" src = assets/images/obi.jpg></img>
-                            <p class = "charValue">
+                            <p id = "obihealth" class = "charValue">
                                 170
                             </p>
                 </div>
@@ -89,7 +89,7 @@
                                 Yoda
                             </p>
                             <img class = "image" src = assets/images/yoda.png></img>
-                            <p class = "charValue">
+                            <p id = "yodahealth" class = "charValue">
                                 230
                             </p>
                 </div>
@@ -98,7 +98,7 @@
                                 Qui-Gon Jinn
                             </p>
                             <img class = "image" src = assets/images/qui.png></img>
-                            <p class = "charValue">
+                            <p id = "quihealth" class = "charValue">
                                 190
                             </p>
                 </div>
@@ -192,6 +192,13 @@
                     190
                 </p>
         </div>
+        </div>
+        <div class = "row">
+            <p id = attackText class = "battle"></p>
+            
+        </div>
+        <div class = "row">
+            <p id = counterText class = "battle"></p>
         </div>
   
 
