polished battle mechanics

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
         <div class = "row">
             <p id = counterText class = "battle"></p>
         </div>
+        <div class = "row">
+            <p id = flavourText class = "battle"></p>
+        </div>
+      
   
 
     </div>
