fixed image tag issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p class = "charName">
                         Luke Skywalker
                     </p>
-                    <img class = "image" src = assets/images/luke.jpg></img>
+                    <img class = "image" src = assets/images/luke.jpg/>
                     <p class = "charValue">
                         150
                     </p>
@@ -35,7 +35,7 @@
                     <p class = "charName">
                         Obi-Wan Kenobi
                     </p>
-                    <img class = "image" src = assets/images/obi.jpg></img>
+                    <img class = "image" src = assets/images/obi.jpg/>
                     <p class = "charValue">
                        170
                     </p>
@@ -44,7 +44,7 @@
                     <p class = "charName">
                         Yoda
                     </p>
-                    <img class = "image" src = assets/images/yoda.png></img>
+                    <img class = "image" src = assets/images/yoda.png/>
                     <p  class = "charValue">
                         230
                     </p>
@@ -53,7 +53,7 @@
                     <p class = "charName">
                         Qui-Gon Jinn
                     </p>
-                    <img class = "image" src = assets/images/qui.png></img>
+                    <img class = "image" src = assets/images/qui.png/>
                     <p  class = "charValue">
                         190
                     </p>
@@ -70,7 +70,7 @@
                         <p class = "charName">
                             Luke Skywalker
                         </p>
-                        <img class = "image" src = assets/images/luke.jpg></img>
+                        <img class = "image" src = assets/images/luke.jpg/>
                         <p id = "lukehealth" class = "charValue">
                             150
                         </p>
@@ -79,7 +79,7 @@
                             <p class = "charName">
                                 Obi-Wan Kenobi
                             </p>
-                            <img class = "image" src = assets/images/obi.jpg></img>
+                            <img class = "image" src = assets/images/obi.jpg/>
                             <p id = "obihealth" class = "charValue">
                                 170
                             </p>
@@ -88,7 +88,7 @@
                             <p class = "charName">
                                 Yoda
                             </p>
-                            <img class = "image" src = assets/images/yoda.png></img>
+                            <img class = "image" src = assets/images/yoda.png/>
                             <p id = "yodahealth" class = "charValue">
                                 230
                             </p>
@@ -97,7 +97,7 @@
                             <p class = "charName">
                                 Qui-Gon Jinn
                             </p>
-                            <img class = "image" src = assets/images/qui.png></img>
+                            <img class = "image" src = assets/images/qui.png/>
                             <p id = "quihealth" class = "charValue">
                                 190
                             </p>
@@ -111,7 +111,7 @@
                         <p class = "charName">
                             Luke Skywalker
                         </p>
-                        <img class = "image" src = assets/images/luke.jpg></img>
+                        <img class = "image" src = assets/images/luke.jpg/>
                         <p class = "charValue">
                             150
                         </p>
@@ -120,7 +120,7 @@
                             <p class = "charName">
                                 Obi-Wan Kenobi
                             </p>
-                            <img class = "image" src = assets/images/obi.jpg></img>
+                            <img class = "image" src = assets/images/obi.jpg/>
                             <p class = "charValue">
                                 170
                             </p>
@@ -129,7 +129,7 @@
                             <p class = "charName">
                                 Yoda
                             </p>
-                            <img class = "image" src = assets/images/yoda.png></img>
+                            <img class = "image" src = assets/images/yoda.png/>
                             <p class = "charValue">
                                 230
                             </p>
@@ -138,7 +138,7 @@
                             <p class = "charName">
                                 Qui-Gon Jinn
                             </p>
-                            <img class = "image" src = assets/images/qui.png></img>
+                            <img class = "image" src = assets/images/qui.png/>
                             <p class = "charValue">
                                 190
                             </p>
@@ -160,7 +160,7 @@
                 <p class = "charName2">
                     Luke Skywalker
                 </p>
-                <img class = "image" src = assets/images/luke.jpg></img>
+                <img class = "image" src = assets/images/luke.jpg/>
                 <p id = "luke4health" class = "charValue2">
                     150
                 </p>
@@ -169,7 +169,7 @@
                 <p class = "charName2">
                     Obi-Wan Kenobi
                 </p>
-                <img class = "image" src = assets/images/obi.jpg></img>
+                <img class = "image" src = assets/images/obi.jpg/>
                 <p id = "obi4health" class = "charValue2">
                     170
                 </p>
@@ -178,7 +178,7 @@
                 <p class = "charName2">
                     Yoda
                 </p>
-                <img class = "image" src = assets/images/yoda.png></img>
+                <img class = "image" src = assets/images/yoda.png/>
                 <p id = "yoda4health" class = "charValue2">
                     230
                 </p>
@@ -187,7 +187,7 @@
                 <p class = "charName2">
                     Qui-Gon Jinn
                 </p>
-                <img class = "image" src = assets/images/qui.png></img>
+                <img class = "image" src = assets/images/qui.png/>
                 <p id = "qui4health" class = "charValue2">
                     190
                 </p>
