--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <p class = "charName2">
                     Luke Skywalker
                 </p>
-                <img class = "image" src = assets/images/luke.jpg>
+                <img alt = "luke" src = assets/images/luke.jpg>
                 <p id = "luke4health" class = "charValue2">
                     150
                 </p>
@@ -169,7 +169,7 @@
                 <p class = "charName2">
                     Obi-Wan Kenobi
                 </p>
-                <img class = "image" src = assets/images/obi.jpg>
+                <img alt = "obi" src = assets/images/obi.jpg>
                 <p id = "obi4health" class = "charValue2">
                     170
                 </p>
@@ -178,7 +178,7 @@
                 <p class = "charName2">
                     Yoda
                 </p>
-                <img class = "image" src = assets/images/yoda.png>
+                <img alt = "yoda" src = assets/images/yoda.png>
                 <p id = "yoda4health" class = "charValue2">
                     230
                 </p>
@@ -187,7 +187,7 @@
                 <p class = "charName2">
                     Qui-Gon Jinn
                 </p>
-                <img class = "image" src = assets/images/qui.png>
+                <img alt = "qui" src = assets/images/qui.png>
                 <p id = "qui4health" class = "charValue2">
                     190
                 </p>
