another attempt to fix images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p class = "charName">
                         Luke Skywalker
                     </p>
-                    <img class = "image" src = assets/images/luke.jpg>
+                    <img alt = "luke" src = assets/images/luke.jpg>
                     <p class = "charValue">
                         150
                     </p>
@@ -35,7 +35,7 @@
                     <p class = "charName">
                         Obi-Wan Kenobi
                     </p>
-                    <img class = "image" src = assets/images/obi.jpg>
+                    <img alt = "obi" src = assets/images/obi.jpg>
                     <p class = "charValue">
                        170
                     </p>
@@ -44,7 +44,7 @@
                     <p class = "charName">
                         Yoda
                     </p>
-                    <img class = "image" src = assets/images/yoda.png>
+                    <img alt = "yoda" src = assets/images/yoda.png>
                     <p  class = "charValue">
                         230
                     </p>
@@ -53,7 +53,7 @@
                     <p class = "charName">
                         Qui-Gon Jinn
                     </p>
-                    <img class = "image" src = assets/images/qui.png>
+                    <img alt = "qui" src = assets/images/qui.png>
                     <p  class = "charValue">
                         190
                     </p>
@@ -70,7 +70,7 @@
                         <p class = "charName">
                             Luke Skywalker
                         </p>
-                        <img class = "image" src = assets/images/luke.jpg>
+                        <img alt = "luke" src = assets/images/luke.jpg>
                         <p id = "lukehealth" class = "charValue">
                             150
                         </p>
@@ -79,7 +79,7 @@
                             <p class = "charName">
                                 Obi-Wan Kenobi
                             </p>
-                            <img class = "image" src = assets/images/obi.jpg>
+                            <img alt = "obi" src = assets/images/obi.jpg>
                             <p id = "obihealth" class = "charValue">
                                 170
                             </p>
@@ -88,7 +88,7 @@
                             <p class = "charName">
                                 Yoda
                             </p>
-                            <img class = "image" src = assets/images/yoda.png>
+                            <img alt = "yoda" src = assets/images/yoda.png>
                             <p id = "yodahealth" class = "charValue">
                                 230
                             </p>
@@ -97,7 +97,7 @@
                             <p class = "charName">
                                 Qui-Gon Jinn
                             </p>
-                            <img class = "image" src = assets/images/qui.png>
+                            <img alt = "qui" src = assets/images/qui.png>
                             <p id = "quihealth" class = "charValue">
                                 190
                             </p>
@@ -111,7 +111,7 @@
                         <p class = "charName">
                             Luke Skywalker
                         </p>
-                        <img class = "image" src = assets/images/luke.jpg>
+                        <img alt = "luke" src = assets/images/luke.jpg>
                         <p class = "charValue">
                             150
                         </p>
@@ -120,7 +120,7 @@
                             <p class = "charName">
                                 Obi-Wan Kenobi
                             </p>
-                            <img class = "image" src = assets/images/obi.jpg>
+                            <img alt = "obi" src = assets/images/obi.jpg>
                             <p class = "charValue">
                                 170
                             </p>
@@ -129,7 +129,7 @@
                             <p class = "charName">
                                 Yoda
                             </p>
-                            <img class = "image" src = assets/images/yoda.png>
+                            <img alt = "yoda" src = assets/images/yoda.png>
                             <p class = "charValue">
                                 230
                             </p>
@@ -138,7 +138,7 @@
                             <p class = "charName">
                                 Qui-Gon Jinn
                             </p>
-                            <img class = "image" src = assets/images/qui.png>
+                            <img alt = "qui" src = assets/images/qui.png>
                             <p class = "charValue">
                                 190
                             </p>
